* 2007-10-08 - manuel.kraft@open-xchange.com

 - Bugfix ID#9616 Deleted users are not removed from Global Addressbook in Outlook

* 2007-09-26 - choeger@open-xchange.com

  - Bugfix ID#9582 osgi/config.ini does not exist on upgrading the
  open-xchange-admin

* 2007-09-20 - dennis.sieben@open-xchange.com

  - Bugfix ID#9592 Language is not in the output of listuser --csv CLT
  
* 2007-09-11 - dennis.sieben@open-xchange.com

  - Bugfix ID#9362 <addmembers> should be <userid>
  
* 2007-09-07 - choeger@open-xchange.com

 - Bugfix #9235 Crypt implementation should be able to handle UTF-8

* 2007-09-05 - dennis.sieben@open-xchange.com

  - Bugfix ID#9254 showruntimestats gives NullPointerException
  
* 2007-08-31 - choeger@open-xchange.com

  - Bugfix ID#9156 Malformed path to HTMLEntities.properties

* 2007-08-22 - dennis.sieben@open-xchange.com

  - Bugfix ID#9023 createcontext name should be added to lmappings
  - Bugfix ID#9047 createuser not needed parameter --name
  - Bugfix ID#9046 createuser text for --extendedoptions printed on sterr
  - Bugfix ID#9034 createcontext null printed instead of cid in case of error
  - Bugfix ID#8735 Some code clean open-xchange-admin
  
* 2007-08-21 - choeger@open-xchange.com

  - Bugfix ID#8995 oxinstaller return value is always 0
    ox_set_property now checks whether propfile exists

* 2007-08-21 - dennis.sieben@open-xchange.com

  - Bugfix ID#8998 --nonl not consistent
  - Bugfix ID#8985 createuser doesn't check --timezone format
 
* 2007-08-20 - manuel.kraft@open-xchange.com

 - Bugfix ID#8875 No email validation for /opt/open-xchange/sbin/createcontext

* 2007-08-16 - dennis.sieben@open-xchange.com

 - Bugfix ID#8830 if user is deleted and plugin error occures, no message is shown.
 
* 2007-08-16 - manuel.kraft@open-xchange.com

 - Bugfix ID#8839 "Virtual" PIM folders are not updated when changing users displayname

* 2007-08-16 - choeger@open-xchange.com
